@@ -286,8 +286,18 @@ Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/20
 </P>
 
 <P>15. NAT FRIEDMAN<br />
-No summary sent for the moment. Will be updated.
-<br />
+&quot;
+To date, the GNOME foundation has failed to be of any substantial
+benefit to the GNOME project.  We are, however, reaching a level of
+momentum and organization at which the foundation can have a big
+impact.  What we lack is resources: funds to subsidize in-person events,
+to fly people to conferences, to support our hardware and
+infrastructural needs, to promote the project, and to provide equipment
+to hackers who need it.  I served as co-chair of the board this last
+year and organized the 90-person Boston GNOME Summit in July.  If
+elected this year, my focus will be on ensuring that GNOME has the
+resources it needs to succeed.
+&quot;<br />
 Affiliation: Ximian.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00011.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00011.html</a>
 </P>
