@@ -1,3 +1,7 @@
+2002-11-07  Vincent Untz  <vincent@vuntz.net>
+
+	* ballot-summary.html: updated Nat's summary.
+
 2002-11-06  Vincent Untz  <vincent@vuntz.net>
 
 	* ballot-summary.html: updated Jeff's affiliation.
